--- a/pub/css/comments.css
+++ b/pub/css/comments.css
@@ -8,7 +8,7 @@ p {
 	font: normal normal normal 12px Georgia, serif;
 }
 
-#container {
+#commentsWP {
 	margin:10px auto;
 	width:250px;
 }
@@ -56,7 +56,7 @@ p {
     background-color:#bcfc3d;
 }
 
-input {
+input, textarea {
 	color:#666;
     background-color:#fff;
     font-family:georgia,times;
@@ -94,7 +94,6 @@ a:hover {
 
 h1 {
     font-size:16px;
-    letter-spacing:-2px;
     text-align:center;
 }
 
